@@ -29,6 +29,7 @@ LOCATION = 'youtube.location'  # (str)
 LOCATION_RADIUS = 'youtube.location.radius'  # (int)
 PLAY_COUNT_MIN_PERCENT = 'kodion.play_count.percent'  # (int)
 USE_PLAYBACK_HISTORY = 'kodion.playback.history'  # (bool)
+REMOTE_FRIENDLY_SEARCH = 'youtube.search.remote.friendly'  # (bool)
 
 SUPPORT_ALTERNATIVE_PLAYER = 'kodion.support.alternative_player'  # (bool)
 ALTERNATIVE_PLAYER_WEB_URLS = 'kodion.alternative_player.web.urls'  # (bool)
